# Pump

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  dashboard_lambda.py  index.html  sdkconfig  sdkconfig.defaults.2mb  sdkconfig.defaults.8mb
components/espressif__esp32-camera/: Kconfig
components/espressif__esp32-camera/driver/: esp_camera.c
components/espressif__esp32-camera/sensors/private_include/: ov5640_settings.h
main/: CMakeLists.txt  Kconfig.projbuild  camera_pin.h  index.html  main.c  sim.c  sim.h  wifi.c
mongoose/: mongoose_fs.c  mongoose_glue.c  mongoose_glue.h  mongoose_impl.c  mongoose_wizard.json
pcb/: 2mb.cfg  8mb.cfg
